cloudformation/StandardLinuxEC2.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: CF-StandardLinuxEC2

Parameters:

  pInstanceImage:
    Type: String
    Description: Subnet ID for where the instance will be launched
    Default: ami-a4c7edb2

Resources:

  rStandardInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref pInstanceImage
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref rSSHSecurityGroup
        - !Ref rServerSecurityGroup

      
  # our EC2 security group
  rSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

  # our second EC2 security group
  rServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from specified CIDR ranges
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 172.31.0.0/20

  rCloudWatchAlarmStack:
    Type: My::CloudWatch::SampleAlarm::MODULE
    Properties:
      Parameters:
        pEc2InstanceId: !Ref rStandardInstance
        pInstanceStackName: !Ref AWS::StackName
      

Outputs:
  oNestedInstanceID:
    Description: This will return the Instance ID, to be used in the ec2-alarms-cw cft.
    Value: !Ref rStandardInstance
  
  oStackName:
    Description: Stack Name for Instance
    Value: !Sub '${AWS::StackName}'
    
  oRegion:
    Description: Region EC2 was Launched in
    Value: !Ref AWS::Region
